#  (The MIT License)
#
#  Copyright (c) 2016 Mohammad S. Babaei
#
#  Permission is hereby granted, free of charge, to any person obtaining a copy
#  of this software and associated documentation files (the "Software"), to deal
#  in the Software without restriction, including without limitation the rights
#  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#  copies of the Software, and to permit persons to whom the Software is
#  furnished to do so, subject to the following conditions:
#
#  The above copyright notice and this permission notice shall be included in
#  all copies or substantial portions of the Software.
#
#  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
#  THE SOFTWARE.


FILE ( GLOB CORELIB_SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp )

SET ( CORELIB_BIN_FILE "${CORELIB_BIN_NAME}" )

ADD_LIBRARY ( ${CORELIB_BIN_FILE} ${CORELIB_LINK_TYPE} ${CORELIB_SOURCE_FILES} )

FOREACH ( FLAG ${CXX11_FEATURE_LIST} )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS ${FLAG} )
ENDFOREACH ( FLAG ${CXX11_FEATURE_LIST} )

IF ( MINGW )
    TARGET_LINK_LIBRARIES ( ${CORELIB_BIN_FILE} "-lws2_32 -lwsock32" )
ENDIF (  )

TARGET_LINK_LIBRARIES ( ${CORELIB_BIN_FILE}
    ${Boost_LIBRARIES}
    ${CPPDB_LIBRARY}
    ${CRYPTOPP_LIBRARY}
    ${CURLPP_LIBRARY}
    ${GEOIP_LIBRARY}
    ${KVM_LIBRARY}
    ${LIBB64_LIBRARY}
    ${LIBCURL_LIBRARY}
    ${LIBZIP_LIBRARY}
    ${MYSQL_LIBRARY}
    ${PGSQL_LIBRARY}
    ${SQLITE3_LIBRARY}
    ${VMIME_LIBRARY}
)

IF ( DEFINED CXX_COMPILE_MODE )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE=${CXX_COMPILE_MODE}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_98=${CXX_COMPILE_MODE_98}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_03=${CXX_COMPILE_MODE_03}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_0x=${CXX_COMPILE_MODE_0x}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_11=${CXX_COMPILE_MODE_11}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_1y=${CXX_COMPILE_MODE_1y}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_14=${CXX_COMPILE_MODE_14}" )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "CXX_COMPILE_MODE_1z=${CXX_COMPILE_MODE_1z}" )
ENDIF (  )

IF ( DEFINED CORELIB_DEFINES )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "${CORELIB_DEFINES}" )
ENDIF (  )

IF ( DEFINED LIBB64_BUFFERSIZE )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "BUFFERSIZE=${LIBB64_BUFFERSIZE}" )
ENDIF (  )

IF ( DEFINED SQLITE3_FOUND )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "HAS_SQLITE3" )
ENDIF (  )
IF ( DEFINED CPPDB_SQLITE3_DRIVER_FOUND )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "HAS_CPPDB_SQLITE3_DRIVER" )
ENDIF (  )
IF ( DEFINED CPPDB_PGSQL_DRIVER_FOUND )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "HAS_CPPDB_PGSQL_DRIVER" )
ENDIF (  )
IF ( DEFINED CPPDB_MYSQL_DRIVER_FOUND )
    SET_PROPERTY ( TARGET ${CORELIB_BIN_FILE} APPEND PROPERTY COMPILE_DEFINITIONS "HAS_CPPDB_MYSQL_DRIVER" )
ENDIF (  )

GET_PROPERTY ( CORELIB_LIBRARY TARGET ${CORELIB_BIN_FILE} PROPERTY LOCATION )

IF ( CXX_GCC AND GCC_STRIP_EXECUTABLE )
    ADD_CUSTOM_COMMAND ( TARGET ${CORELIB_BIN_FILE}
        POST_BUILD
        COMMAND strip ${CORELIB_LIBRARY}
        COMMAND strip -R.comment ${CORELIB_LIBRARY}
        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    )
ENDIF (  )


